--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ LOG_QUEUE=LOG_QUEUE
 SELECTOR_QUEUE=KILL_SELECTOR_QUEUE
 CREATE_QUEUE=KILL_CREATE_QUEUE
 COLLECTION_NAME=mergerecords
-SOURCES=adNN,sf,es,city,mir
+SOURCES=adNN_name,sf_name,es_name,city_name,mir_name
 DAYS_BEFORE=30
 HOUR_SCHEDULE=6
 SYSTEM_NAME=TRAKING
